Update base typography and add page padding

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,9 @@
-html {
-    font-family: OpenSans, Helvetica, sanserif;
+/* ----- Base Typography----- */
+body {
+	font-family: OpenSans, Helvetica, Arial, sans-serif;
+	font-size: 16px;
 }
+h1, h2, h3, h4, h5, h6 { font-family: Georgia, "Times New Roman", Times, serif; }
+
+/* ----- */
+.page { padding: 20px 0; }
