Fix buttons so they don't change color when show class is added

--- a/docs/css/color.css
+++ b/docs/css/color.css
@@ -35,30 +35,35 @@ body  { background-color: var(--ssc-bg-body); }
 .page { background-color: var(--ssc-bg-page); color: var(--ssc-text-page); }
 
 .btn-ssc-a,
+.btn-ssc-a.show,
 .btn-ssc-a:not(:disabled):not(.disabled):active,
 .btn-ssc-a:hover,
 .show > .btn-ssc-a.dropdown-toggle  { background-color: var(--ssc-a); border-color: var(--ssc-a); color: var(--ssc-white); }
 .text-ssc-a { color: var(--ssc-a); }
 
 .btn-ssc-b,
+.btn-ssc-b.show,
 .btn-ssc-b:not(:disabled):not(.disabled):active,
 .btn-ssc-b:hover,
 .show > .btn-ssc-b.dropdown-toggle  { background-color: var(--ssc-b); border-color: var(--ssc-b); color: var(--ssc-white); }
 .text-ssc-b { color: var(--ssc-b); }
 
 .btn-ssc-c,
+.btn-ssc-c.show,
 .btn-ssc-c:not(:disabled):not(.disabled):active,
 .btn-ssc-c:hover,
 .show > .btn-ssc-c.dropdown-toggle  { background-color: var(--ssc-c); border-color: var(--ssc-c); color: var(--ssc-white); }
 .text-ssc-c { color: var(--ssc-c); }
 
 .btn-ssc-d,
+.btn-ssc-d.show,
 .btn-ssc-d:not(:disabled):not(.disabled):active,
 .btn-ssc-d:hover,
 .show > .btn-ssc-d.dropdown-toggle  { background-color: var(--ssc-d); border-color: var(--ssc-d); color: var(--ssc-white); }
 .text-ssc-d { color: var(--ssc-d); }
 
 .btn-ssc-e,
+.btn-ssc-e.show,
 .btn-ssc-e:not(:disabled):not(.disabled):active,
 .btn-ssc-e:hover,
 .show > .btn-ssc-e.dropdown-toggle  { background-color: var(--ssc-e); border-color: var(--ssc-e); color: var(--ssc-white); }
