Add style for bar, hr and li marker colors.

--- a/docs/css/color.css
+++ b/docs/css/color.css
@@ -68,3 +68,33 @@ body  { background-color: var(--ssc-bg-body); }
 .btn-ssc-e:hover,
 .show > .btn-ssc-e.dropdown-toggle  { background-color: var(--ssc-e); border-color: var(--ssc-e); color: var(--ssc-white); }
 .text-ssc-e { color: var(--ssc-e); }
+
+.bar-top, .bar-btm { position: relative; }
+.bar-top:before, .bar-btm:after {
+	background-color: black;
+	content: "";
+	height: 4px;
+	position: absolute;
+	width: 100%;
+}
+.bar-top:before { top: 0; }
+.bar-btm:after { bottom: 0; }
+.bar-ssc-a:before, .bar-ssc-a:after { background-color: var(--ssc-a); }
+.bar-ssc-b:before, .bar-ssc-b:after { background-color: var(--ssc-b); }
+.bar-ssc-c:before, .bar-ssc-c:after { background-color: var(--ssc-c); }
+.bar-ssc-d:before, .bar-ssc-d:after { background-color: var(--ssc-d); }
+.bar-ssc-e:before, .bar-ssc-e:after { background-color: var(--ssc-e); }
+
+.hr-ssc { background-color: black; border: 0; height: 1px; opacity: 1; }
+.hr-ssc-a { background-color: var(--ssc-a); }
+.hr-ssc-b { background-color: var(--ssc-b); }
+.hr-ssc-c { background-color: var(--ssc-c); }
+.hr-ssc-d { background-color: var(--ssc-d); }
+.hr-ssc-e { background-color: var(--ssc-e); }
+
+.marker-ssc li::marker { color: black; }
+.marker-ssc-a li::marker { color: var(--ssc-a); }
+.marker-ssc-b li::marker { color: var(--ssc-b); }
+.marker-ssc-c li::marker { color: var(--ssc-c); }
+.marker-ssc-d li::marker { color: var(--ssc-d); }
+.marker-ssc-e li::marker { color: var(--ssc-e); }
