--- a/docs/template/nav-primary.html
+++ b/docs/template/nav-primary.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="nav nav-primary">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/time.html">Time</a>
-        <a class="nav-link" href="/material.html">Material</a>
+        <a class="nav-link" href="/time.html">Time Stamp</a>
+        <a class="nav-link" href="/material.html">Material Analysis</a>
     </div>
 </div>
