Copy site icon to nav

--- a/docs/template/nav-primary.html
+++ b/docs/template/nav-primary.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="nav nav-primary">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/">
+            <img src="/img/ss.png">
+            Home
+        </a>
         <a class="nav-link" href="/time.html">Time Stamp</a>
         <a class="nav-link" href="/material.html">Material Analysis</a>
     </div>
