Update nav alignment

--- a/docs/template/nav-primary.html
+++ b/docs/template/nav-primary.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="nav nav-primary">
-        <a class="nav-link" href="/">
+    <div class="nav d-flex">
+        <a class="nav-link align-self-baseline" href="/">
             <img src="/img/ss.png">
             Home
         </a>
-        <a class="nav-link" href="/time.html">Time Stamp</a>
-        <a class="nav-link" href="/material.html">Material Analysis</a>
+        <a class="nav-link align-self-baseline" href="/time.html">Time Stamp</a>
+        <a class="nav-link align-self-baseline" href="/material.html">Material Analysis</a>
     </div>
 </div>
