--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -7,3 +7,4 @@ h1, h2, h3, h4, h5, h6 { font-family: Georgia, "Times New Roman", Times, serif; 
 
 /* ----- */
 .page { padding: 20px 0; }
+.text-dim { opacity: 0.5; }
