Add version and copyright with flex

--- a/docs/template/nav-footer.html
+++ b/docs/template/nav-footer.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <div class="nav nav-footer">
-        <a class="nav-link" href="/change.html">Change Log</a>
+    <div class="nav d-flex">
+        <div class="flex-fill">
+            <a class="nav-link" href="/change.html">Change Log, 0.1.0</a>
+        </div>
+        <div class="flex-fill text-end text-dim">
+            © 2023
+        </div>
     </div>
 </div>
