Link in the primary nav

--- a/docs/template/nav-primary.html
+++ b/docs/template/nav-primary.html
@@ -6,5 +6,6 @@
         </a>
         <a class="nav-link align-self-baseline" href="/time.html">Time Stamp</a>
         <a class="nav-link align-self-baseline" href="/material.html">Material Analysis</a>
+        <a class="nav-link align-self-baseline" href="/oremon">Ore Monger</a>
     </div>
 </div>
