--- a/docs/template/nav-primary.html
+++ b/docs/template/nav-primary.html
@@ -2,10 +2,19 @@
     <div class="nav d-flex">
         <a class="nav-link align-self-baseline" href="/">
             <img src="/img/ss.png">
-            Home
+            <span class="d-none d-sm-inline-block">Home</span>
         </a>
-        <a class="nav-link align-self-baseline" href="/time.html">Time Stamp</a>
-        <a class="nav-link align-self-baseline" href="/material.html">Material Analysis</a>
-        <a class="nav-link align-self-baseline" href="/oremon">Ore Monger</a>
+        <a class="nav-link align-self-baseline" href="/time.html">
+            Time
+            <span class="d-none d-sm-inline-block">Stamp</span>
+        </a>
+        <a class="nav-link align-self-baseline" href="/material.html">
+            Material
+            <span class="d-none d-sm-inline-block">Analysis</span>
+        </a>
+        <a class="nav-link align-self-baseline" href="/oremon">
+            Ore
+            <span class="d-none d-sm-inline-block">Monger</span>
+        </a>
     </div>
 </div>
