--- a/docs/css/oremon.css
+++ b/docs/css/oremon.css
@@ -15,6 +15,7 @@
     padding: 2em;
     text-align: center;
 }
+.table td, .table th { cursor: default; }
 
 tr.selected td {
     background: rgba(255, 255, 0, 0.2);
