--- a/docs/css/oremon.css
+++ b/docs/css/oremon.css
@@ -1,3 +1,5 @@
+.msg { color: #ccc; font-family: Menlo,Consolas,Monaco,monospace; }
+
 .user-item {
     border: 1px solid var(--ssc-d);
     border-radius: 4px;
@@ -16,7 +18,6 @@
     text-align: center;
 }
 .table td, .table th { cursor: default; }
-
 tr.selected td {
     background: rgba(255, 255, 0, 0.2);
 }
